# MRSS2025-go1-challenge

./: .gitignore  README.md  _isaac_sim  go1_test.usd  pyproject.toml
config/: sim2real_params.yaml  training_params.yaml  training_params_charles.yaml  training_params_mrss.yaml
docs/: Sim2Real Tutorial.md
go1_challenge/: README.md
go1_challenge/arena_assets/: README.md  arena_5x5.usd  create_arena_usd.py  go1_nav_world.usd
go1_challenge/arena_assets/assets/: arena_5x5.usd  goal.usd  obstacle.usd  obstacle_stage.usd
go1_challenge/arena_assets/examples/: create_quadruped_base_env.py  spawn_prims.py
go1_challenge/docker/: Dockerfile  entrypoint.sh
go1_challenge/isaac_sim/: README.md  arena_example.py  convert_svg_to_png.py  create_arena_usd.py  go1_challenge_env_cfg.py
go1_challenge/isaac_sim/assets/: april_tags.usd  arena_5x5.usd
go1_challenge/isaac_sim/scripts/: arena_generator.py  generate_aruco_textures.py  go1_nav_env.py
go1_challenge/isaac_sim/worlds/: go1_nav_world_aruco_map.yaml  tags_loc.py
go1_challenge/isaaclab_tasks/: __init__.py
go1_challenge/isaaclab_tasks/go1_locomotion/: __init__.py  go1_challenge_env_cfg.py  go1_locomotion_env_cfg.py  go1_sim2real_env_cfg.py
go1_challenge/launch/: sim_launch.py
go1_challenge/navigation/: __init__.py  nav_controller.py
go1_challenge/scripts/: check_keyboard.py  go1_nav_env.py  go1_teleop_env.py  pyapriltag_example.py  teleop_se3_agent.py
policies/: policy_mohamad.pt  policy_rough.pt
scripts/: 00-verify_installation.py  01-train.py  02-play.py  03-go1_arena.py  03-go1_nav.py
scripts/camera/: camera.py  camera_subscriber.py  gstreamer_test.py
scripts/deploy/: run_nav_controller.py  run_policy.py
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/skrl/: play.py  train.py
(+18 files in other folders)
